refactor: 현금 입출금 내역 조회를 PageResponse 기반으로 리팩토링